# RAFile

./: .gitignore  CMakeLists.txt
src/personnel/cpp/: Personnel.cpp  Writer.cpp  abstract_writer.cpp  file_writer.cpp  personnel.cpp
src/personnel/include/: Personnel.h  Writer.h  abstract_writer.h  file_writer.h  personnel.h
test/: MockWriter.cpp  MockWriter.h  RandomAFTest.cpp  mock_writer.cpp  mock_writer.h  random_aftest.cpp
